switch to pre-built action

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,5 +8,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag canhaveinternet:$GITHUB_REF-$(date +%s)
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: houseofmoran/canhaveinternet
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
