--- a/snitch/snitch-agent/Cargo.toml
+++ b/snitch/snitch-agent/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde = { version="1.0.137", features = ["derive"] }
 serde_json = "1.0.73"
 chrono = { version="0.4.19", features = ["serde"] }
+actix-web = "4.0.1"
