--- a/snitch/snitch-agent/Cargo.toml
+++ b/snitch/snitch-agent/Cargo.toml
@@ -10,4 +10,6 @@ serde = { version="1.0.137", features = ["derive"] }
 serde_json = "1.0.73"
 chrono = { version="0.4.19", features = ["serde"] }
 actix-web = "4.0.1"
+actix-rt = "2.7.0"
 prometheus-client = "0.15.1"
+async-std = "1.11.0"
