--- a/snitch/snitch-agent/Cargo.toml
+++ b/snitch/snitch-agent/Cargo.toml
@@ -13,3 +13,4 @@ actix-web = "4.0.1"
 actix-rt = "2.7.0"
 prometheus-client = "0.15.1"
 async-std = "1.11.0"
+clap = { version="3.1.14", features = ["derive"] }
