--- a/snitch/snitch-agent/Cargo.toml
+++ b/snitch/snitch-agent/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 serde = { version="1.0.137", features = ["derive"] }
 serde_json = "1.0.73"
 chrono = { version="0.4.19", features = ["serde"] }
-actix-web = "4.0.1"
-actix-rt = "2.7.0"
-prometheus-client = "0.15.1"
-async-std = "1.11.0"
+tokio = { version="1.18.0", features = ["macros", "rt-multi-thread"] }
 clap = { version="3.1.14", features = ["derive"] }
+influxdb2 = "0.1.0"
+futures = "0.3.21"
+dotenv = "0.15.0"
